fix: remove scrollbars

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -38,6 +38,14 @@
   --ease: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+* {
+  scrollbar-width: none; /* Firefox */
+}
+
+*::-webkit-scrollbar {
+  display: none; /* Chrome, Safari */
+}
+
 html,
 body {
   height: 100%;
